Replace in-memory pong counter with PostgreSQL persistence
- Add SQLAlchemy models and database connection
- Implement database session management with dependency injection
- Add health check endpoints for application and database status
- Update PersistentVolumeClaim label to postgres
- Add sqlalchemy and psycopg2-binary dependencies
- Retain old file-based implementation as commented code for reference

--- a/ping-pong/manifests/persistentvolumeclaim.yaml
+++ b/ping-pong/manifests/persistentvolumeclaim.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: shared-storage-claim
   labels:
-    app: shared-storage
+    app: postgres
     project: ${NAMESPACE}
 spec:
   storageClassName: local-storage
