--- a/ping-pong/manifests/service.yaml
+++ b/ping-pong/manifests/service.yaml
@@ -2,12 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ping-pong-svc
+  labels:
+    app: ping-pong
 spec:
-  type: ClusterIP
   selector:
     app: ping-pong
   ports:
-    - name: http
-      protocol: TCP
-      port: 1234
-      targetPort: 8002
+  - port: 1234
+    targetPort: 8002
+  type: ClusterIP
+
